--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,4 @@
-{{!-- title page --}}
+<h1>Shelter Helper</h1>
+
+<button class="uk-button uk-button-default uk-button-large">Adopt Dog</button>
+<button class="uk-button uk-button-default uk-button-large">Shelter Help</button>
