title page button routes set to user and breeder handlebar pages, main.js on click functionalities added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
 <h1>Shelter Helper</h1>
 
-<button class="uk-button uk-button-default uk-button-large">Adopt Dog</button>
-<button class="uk-button uk-button-default uk-button-large">Shelter Help</button>
+<button class="uk-button uk-button-default uk-button-large" id="goAdopt">Adopt Dog</button>
+<button class="uk-button uk-button-default uk-button-large" id="helpShelter">Shelter Help</button>
