--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,12 +20,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;800;900&display=swap"
         rel="stylesheet">
 
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/user.js"></script>
+    <script src="/assets/js/breeder.js"></script>
+
 </head>
 
 <body>
     <div>
     {{{ body }}}
     </div>
-</body>
+
+
 
 </html>
