addshelter.js frontend file added with route click function, added addShelter.handlebars with boiler inputs

--- a/views/breeder.handlebars
+++ b/views/breeder.handlebars
@@ -1,7 +1,7 @@
     <div class="uk-container">
 
         <h2>Shelter Helper</h2>
-
+        <button class="uk-button uk-button-default uk-button" id="add-shelter">Add Shelter/Dogs</button>
         <form>
             <div class="uk-margin">
                 <label>Breed:</label>
