--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/user.js"></script>
     <script src="/assets/js/breeder.js"></script>
-
+    <script src="/assets/js/addShelter.js"></script>
 </head>
 
 <body>
