post route to add shelter name and city to shelters table added, frontend addshelter.js and backend sever.js

--- a/views/addShelter.handlebars
+++ b/views/addShelter.handlebars
@@ -3,7 +3,10 @@
             <h2>Add or select a Shelter</h2>
 
             <label>Shelter Name:</label>
-            <textarea class="uk-textarea" id="shelter-name"></textarea>
+            <input class="uk-input" id="shelter-name"></input>
+
+            <label>Shelter City:</label>
+            <input class="uk-input" id="city-name"></input>
 
             <label>Dog Name:</label>
             <input class="uk-input" id="dog-name"></input>
