--- a/views/addShelter.handlebars
+++ b/views/addShelter.handlebars
@@ -11,10 +11,10 @@
             <button class="uk-button uk-button-primary" id="find-add">Find/Add Shelter</button>
 
             <label>Dog Name:</label>
-            <input class="uk-input" id="dog-name"></input>
+            <input class="uk-input dog-info" id="dog-name"></input>
 
             <label>Dog Breed:</label>
-            <input class="uk-input" id="dog-breed"></input>
+            <input class="uk-input dog-info" id="dog-breed"></input>
 
             <button class="uk-button uk-button-primary" id="add-dog">Add Dog</button>
         </form>
@@ -30,21 +30,8 @@
                     </tr>
                 </thead>
                 <tbody id="table-body">
-                    {{!-- <tr> --}}
-                        {{!-- <td>Table Data</td>
-                        <td>Table Data</td> --}}
-                        {{!-- <td>Table Data</td> --}}
-                    {{!-- </tr> --}}
-                    {{!-- <tr> --}}
-                        {{!-- <td>Table Data</td>
-                        <td>Table Data</td> --}}
-                        {{!-- <td>Table Data</td> --}}
-                    {{!-- </tr> --}}
+
                 </tbody>
             </table>
         </div>
     </div>
-
-    <script>
-        console.log(name);
-    </script>
