added logic if you click add dog but no shelter is created yet, display error messages on add shelter screen that fade after 3 seconds

--- a/views/addShelter.handlebars
+++ b/views/addShelter.handlebars
@@ -9,6 +9,7 @@
             <input class="uk-input" id="city-name"></input>
 
             <button class="uk-button uk-button-primary" id="find-add">Find/Add Shelter</button>
+            <div id="shelter-error"></div>
 
             <label>Dog Name:</label>
             <input class="uk-input dog-info" id="dog-name"></input>
@@ -17,6 +18,7 @@
             <input class="uk-input dog-info" id="dog-breed"></input>
 
             <button class="uk-button uk-button-primary" id="add-dog">Add Dog</button>
+            <div id="dog-error"></div>
         </form>
 
         <div id="shelter-dogs-display">
