clears form inputs after added

--- a/views/breeder.handlebars
+++ b/views/breeder.handlebars
@@ -1,5 +1,6 @@
 <div class="uk-container">
     <h1>Find Popular Dog Breeds in Different Cities</h1>
+    <button class="uk-button uk-button-primary" id="add-shelter">Add Shelter/Dog</button>
     <h5>Search by...</h5>
     <button class="uk-button uk-button-primary" id="byBreed">Breed</button>
     <button class="uk-button uk-button-primary" id="byCity">City</button>
