user location post route saves city locaiton and default breed to results table

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -9,14 +9,14 @@
             <option></option>
         </select>
 
-        <label>Text Label</label>
-        <textarea class="uk-textarea"></textarea>
+        <label>Location: (City, St)</label>
+        <textarea class="uk-textarea" id="city-location"></textarea>
 
         <label><input class="uk-radio" type="radio">Label</label>
         <label><input class="uk-checkbox" type="checkbox">Label</label>
         <label><input class="uk-range" type="range">Slide</label>
         
-        <button class="uk-button uk-button-primary">Submit</button>
+        <button class="uk-button uk-button-primary" id="find-breed">Submit</button>
     </form>
 
     <hr>
