added tolowercase for location input and added cap class to dropdown options and breeder table display

--- a/views/addShelter.handlebars
+++ b/views/addShelter.handlebars
@@ -5,7 +5,7 @@
             <label>Shelter Name:</label>
             <input class="uk-input" id="shelter-name"></input>
 
-            <label>Shelter City:</label>
+            <label>Shelter City: (City, St)</label>
             <input class="uk-input" id="city-name"></input>
 
             <button class="uk-button uk-button-primary" id="find-add">Find/Add Shelter</button>
