--- a/views/breeder.handlebars
+++ b/views/breeder.handlebars
@@ -12,9 +12,9 @@
         <form>
             <div class="uk-margin">
                 <label>Choose a Breed:</label>
-                <select class="uk-select" id="pickBreed">
+                <select class="uk-select cap" id="pickBreed">
                     {{#each dog}}
-                    <option>{{this.breed}}</option>
+                    <option class="cap">{{this.breed}}</option>
                     {{/each}}
                 </select>
             </div>
@@ -45,9 +45,9 @@
         <form>
             <div class="uk-margin">
                 <label>Choose a City:</label>
-                <select class="uk-select" id="pickCity">
+                <select class="uk-select cap" id="pickCity">
                     {{#each location}}
-                    <option>{{this.city}}</option>
+                    <option class="cap">{{this.city}}</option>
                     {{/each}}
                 </select>
             </div>
