--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;800;900&display=swap"
         rel="stylesheet">
 
-
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
