--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,11 @@
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 
     {{!-- Font Type  --}}
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;800;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jost|Noto+Sans&display=swap" rel="stylesheet">
 
+     {{!-- Style  --}}
     <link rel="stylesheet" href="/assets/css/style.css">
+
 </head>
 
 <body>
