--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,28 @@
-<h1>Shelter Helper</h1>
-
+{{!-- <div class="mobile">
+<img src="/assets/images/bg-mobile.png" alt="" id="shelter-background">
+<div class="uk-container">
+<div class="uk-position-center-left main-text">
+<h1 id="landing-title">Welcome to Shelter Helper.</h1>
+<h3 id="landing-text">A place where you can find the perfect breed and relevant adoption centers.</h3>
 <button class="uk-button uk-button-default uk-button-large" id="goAdopt">Adopt Dog</button>
 <button class="uk-button uk-button-default uk-button-large" id="helpShelter">Shelter Help</button>
+</div>
+</div>
+</div> --}}
+
+<div class="web">
+<div class="uk-inline">
+    <img src="/assets/images/landing1.png" alt="" id="shelter-background">
+</div>
+<div class="uk-container">
+<div class="uk-position-center-left main-text">
+<h1 id="landing-title">Welcome to Shelter Helper.</h1>
+<h3 id="landing-text">A place where you can find the perfect breed and relevant adoption centers.</h3>
+<button class="uk-button uk-button-default uk-button-large" id="goAdopt">Adopt Dog</button>
+<button class="uk-button uk-button-default uk-button-large" id="helpShelter">Shelter Help</button>
+</div>
+</div>
+</div>
+
+
+
