--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -2,7 +2,6 @@
     <div class="uk-navbar-left">
         <img src="/assets/images/logo-nav.png" id="nav-logo" width="50" height="50">
         <ul class="uk-navbar-nav">
-       
         <li id="navbrand">Shelter Helper</li>
         </ul>
     </div>
@@ -17,8 +16,8 @@
 
 <div class="uk-container">
     <form>
-        <h2>Find Your Breed:</h2>
-
+        <h1 class="title user-title">Find the Perfect Dog</h1>
+        <h4 class="sub-text user-text">Take our test to find out which dog best suits your personality.</h4>
         <label>Drop Label</label>
         <select class="uk-select">
             <option></option>
