added font size to style css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,4 @@
-<style>
-    body {
-        background-color: black !important;
-        }
-</style>
+<link rel="stylesheet" href="/assets/css/index.css">
 
 
 {{!-- <div class="uk-inline">
