--- a/views/addShelter.handlebars
+++ b/views/addShelter.handlebars
@@ -56,7 +56,7 @@
         <div id="shelter-dogs-display" class="uk-text-center">
             <div>
             <table class="uk-table">
-                <caption id="title"></caption>
+                <caption id="title" class="caption-title"></caption>
                 <thead>
                     <tr>
                         <th class="addShelter-table">Dog Name</th>
