--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,14 @@
-<link rel="stylesheet" href="/assets/css/index.css">
+{{!-- <link rel="stylesheet" href="/assets/css/main.css"> --}}
 
-
-{{!-- <div class="uk-inline">
+<div class="uk-inline web">
     <img src="/assets/images/landing1.png" alt="" id="shelter-background">
-</div> --}}
+</div>
+
+<header>
+    <div class="mobile">
+        <img src="/assets/images/logo-nav.png" alt="" id="mobile-img" width="120">
+    </div>
+</header>
 
 <div class="uk-container">
 <div class="uk-position-center-left main-text">
