fixed navbar adopt route

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
-            <li><a href="/adopt">Adopt</a></li>
+            <li><a href="/quiz">Adopt</a></li>
             <li><a href="/shelterHelper/home">Shelter</a></li>
             <li><a href="/add">Add Shelter</a></li>
         </ul>
