added styles to user handlebar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,12 @@
     margin-bottom: 0.5rem;
 }
 
+.capital {
+    text-transform: capitalize;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
 /* CONSISTENT STYLE */
 .uk-button {
     font-family: 'Noto Sans', sans-serif;
@@ -22,7 +28,8 @@
     text-align: center;
 }
 
-*+h3, .sub-text{
+*+h3,
+.sub-text {
     font-family: 'Noto Sans', sans-serif;
     margin-top: -11px;
 }
@@ -32,17 +39,27 @@
     margin-bottom: 1rem;
 }
 
+.form-title {
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    color: #4C8492 !important;
+}
+
+/* NAVBAR STYLE */
+
 .uk-navbar-nav>li>a {
     color: black;
     font-family: 'Noto Sans', sans-serif;
     font-size: 15px;
     text-transform: capitalize;
     transition: .1s ease-in-out;
-    transition-property: color,background-color;
+    transition-property: color, background-color;
 }
 
-.uk-navbar-nav>li>a:hover{
-    color:#4C8492;
+.uk-navbar-nav>li>a:hover {
+    color: #4C8492;
 }
 
 .uk-navbar-container {
@@ -70,12 +87,16 @@
     text-align: center;
 }
 
-#byBreed, #byCity {
+#byBreed,
+#byCity {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
-#byBreed:hover, #byCity:hover, #searchCity:hover, #searchBreed:hover {
+#byBreed:hover,
+#byCity:hover,
+#searchCity:hover,
+#searchBreed:hover {
     background-color: #F7DC95;
     border-color: #F7DC95;
     color: black;
@@ -85,7 +106,8 @@
     margin-left: 1rem;
 }
 
-#searchCity, #searchBreed{
+#searchCity,
+#searchBreed {
     margin-bottom: 3rem;
 }
 
@@ -93,7 +115,7 @@
     text-align: center;
 }
 
-label, .table-title {
+.table-title {
     text-transform: uppercase;
     letter-spacing: 0.8px;
     font-size: 16px !important;
@@ -110,7 +132,8 @@ label, .table-title {
     text-align: center;
 }
 
-.uk-h6, h6 {
+.uk-h6,
+h6 {
     margin-top: 0;
     margin-bottom: 0;
     color: #808080;
@@ -139,9 +162,8 @@ label, .table-title {
     color: #4C8492 !important;
 }
 
-.uk-table .addShelter-table {
+.add-table .addShelter-table {
     text-align: center;
-
 }
 
 .caption-title {
@@ -166,4 +188,41 @@ label, .table-title {
     background-color: #4C8492 !important;
     border-color: #4C8492;
     color: white;
+}
+
+/* USER STYLE */
+.user-text {
+    text-align: center;
+}
+
+#city-location {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+#questions {
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    color: #4C8492 !important;
+}
+
+input {
+    margin-bottom: 1rem;
+}
+
+#find-breed {
+    margin-top: 1rem;
+}
+
+#find-breed:hover {
+    background-color: #F7DC95;
+    border-color: #F7DC95;
+    color: black;
+}
+
+.second-title {
+    margin-top: 2rem;
+    font-family: 'Jost', sans-serif;
 }
