added error class to error message for red font

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,10 @@
     margin-bottom: 0.5rem;
 }
 
+.error {
+    color: red;
+}
+
 /* CONSISTENT STYLE */
 .uk-button {
     font-family: 'Noto Sans', sans-serif;
