styled cards for suggested dogs by user

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -52,7 +52,7 @@
         <h3>Suggested Breed:</h3>
         
     </div>
-    <div id="dogs-close-by">
+    <div id="dogs-close-by" class="uk-child-width-1-2@s">
 
     </div>
 
