--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,12 @@
-{{!-- <link rel="stylesheet" href="/assets/css/main.css"> --}}
+<style>
+    html {
+        background: #F7DC95;
+    }
+</style>
 
-<div class="uk-inline web">
+{{!-- <div class="uk-inline web">
     <img src="/assets/images/landing1.png" alt="" id="shelter-background">
-</div>
+</div> --}}
 
 <header>
     <div class="mobile">
