--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -26,14 +26,25 @@
 
                 {{#each questions}}
                 <p>{{this.question}}</p>
+                <div>
                 <input type="radio" name="question{{this.key}}" id="question{{this.key}}" + "a" value="1">
                 <label for="question{{this.key}}" + "a">{{this.answers.a}}</label>
+                </div>
+
+                <div>
                 <input type="radio" name="question{{this.key}}" id="question{{this.key}}" + "b" value="2">
                 <label for="question{{this.key}}" + "b">{{this.answers.b}}</label>
+                </div>
+
+                <div>
                 <input type="radio" name="question{{this.key}}" id="question{{this.key}}" + "c" value="3">
                 <label for="question{{this.key}}" + "c">{{this.answers.c}}</label>
+                </div>
+
+                <div>
                 <input type="radio" name="question{{this.key}}" id="question{{this.key}}" + "d" value="4">
                 <label for="question{{this.key}}" + "d">{{this.answers.d}}</label>
+                </div>
                 {{/each}}
         
 
@@ -42,11 +53,10 @@
         <label><input class="uk-checkbox" type="checkbox">Label</label> --}}
         {{!-- <label><input class="uk-range" type="range">Slide</label>
          --}}
-
         <button class="uk-button uk-button-primary" id="find-breed">Submit</button>
     </form>
 
-    <hr>
+    {{!-- <hr> --}}
 
     <div id="sug-breed">
         <h3>Suggested Breed:</h3>
