--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
     }
 </style>
 
-{{!-- <div class="uk-inline web">
-    <img src="/assets/images/landing1.png" alt="" id="shelter-background">
-</div> --}}
+<div class="uk-inline uk-position-bottom web">
+    <img src="/assets/images/landing1-01.png" alt="" id="shelter-background">
+</div>
 
 <header>
     <div class="mobile">
